RESOLVED FIXED 113220
Should close select popup when the element loses focus
https://bugs.webkit.org/show_bug.cgi?id=113220
Summary Should close select popup when the element loses focus
Gustavo Noronha (kov)
Reported 2013-03-25 10:41:37 PDT
Doing that would make us match Firefox'es behaviour.
Attachments
Patch (6.57 KB, patch)
2013-03-25 10:48 PDT, Gustavo Noronha (kov)
no flags
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (830.16 KB, application/zip)
2013-03-25 11:23 PDT, Build Bot
no flags
Patch (6.57 KB, patch)
2013-03-25 13:32 PDT, Gustavo Noronha (kov)
no flags
Patch (7.66 KB, patch)
2013-03-26 09:09 PDT, Gustavo Noronha (kov)
no flags
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (777.85 KB, application/zip)
2013-03-26 10:18 PDT, Build Bot
no flags
Patch (9.21 KB, patch)
2013-03-26 11:11 PDT, Gustavo Noronha (kov)
no flags
Archive of layout-test-results from webkit-ews-01 for mac-future (651.61 KB, application/zip)
2013-03-27 05:25 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-05 for mac-future (723.21 KB, application/zip)
2013-03-27 06:02 PDT, Build Bot
no flags
Patch (9.23 KB, patch)
2013-03-27 07:29 PDT, Gustavo Noronha (kov)
no flags
Archive of layout-test-results from webkit-ews-01 for mac-future (735.38 KB, application/zip)
2013-03-28 02:30 PDT, Build Bot
no flags
Patch (10.75 KB, patch)
2013-04-02 14:19 PDT, Gustavo Noronha (kov)
no flags
Gustavo Noronha (kov)
Comment 1 2013-03-25 10:48:44 PDT
Build Bot
Comment 2 2013-03-25 11:23:02 PDT
Comment on attachment 194885 [details] Patch Attachment 194885 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-commit-queue.appspot.com/results/17330037 New failing tests: fast/forms/select-popup-closes-on-blur.html
Build Bot
Comment 3 2013-03-25 11:23:03 PDT
Created attachment 194892 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
Gustavo Noronha (kov)
Comment 4 2013-03-25 13:32:03 PDT
Kent Tamura
Comment 5 2013-03-25 17:45:11 PDT
Comment on attachment 194913 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194913&action=review > Source/WebCore/html/HTMLSelectElement.cpp:1231 > + if (RenderMenuList* menuList = toRenderMenuList(renderer())) { We need to check renderer()->isMenuList(). A blur event handler in capturing phase can modify renderer state before the blur event reaches to the target element. > Source/WebCore/testing/Internals.cpp:2068 > + HTMLSelectElement* select = toHTMLSelectElement(node); Possible bad cast. Please check element type even in testing code not to disturb fuzzers. > Source/WebCore/testing/Internals.cpp:2069 > + RenderMenuList* menuList = toRenderMenuList(select->renderer()); ditto. > LayoutTests/fast/forms/select-popup-closes-on-blur-expected.txt:3 > +PASS internals.isSelectPopupVisible(popup) is true > +PASS internals.isSelectPopupVisible(popup) is false > +Test for http://bugs.webkit.org/show_bug.cgi?id=113220 Ensures select popup closes when focus changes. Test description after test results is not good. Please use description() to show the description.
Kent Tamura
Comment 6 2013-03-25 17:48:19 PDT
Comment on attachment 194913 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194913&action=review >> Source/WebCore/html/HTMLSelectElement.cpp:1231 >> + if (RenderMenuList* menuList = toRenderMenuList(renderer())) { > > We need to check renderer()->isMenuList(). A blur event handler in capturing phase can modify renderer state before the blur event reaches to the target element. Ah, my comment was wrong. We don't need to check it. because usesMenuList in defaultEventHandler ensures it.
Kent Tamura
Comment 7 2013-03-25 19:39:21 PDT
Comment on attachment 194913 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194913&action=review > LayoutTests/ChangeLog:9 > + * fast/forms/select-popup-closes-on-blur-expected.txt: Added. > + * fast/forms/select-popup-closes-on-blur.html: Added. Please put the test into fast/forms/select/.
Gustavo Noronha (kov)
Comment 8 2013-03-26 09:09:29 PDT
Build Bot
Comment 9 2013-03-26 10:18:34 PDT
Comment on attachment 195097 [details] Patch Attachment 195097 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-commit-queue.appspot.com/results/17311349 New failing tests: fast/forms/select/popup-closes-on-blur.html fast/repaint/japanese-rl-selection-repaint-in-regions.html
Build Bot
Comment 10 2013-03-26 10:18:35 PDT
Created attachment 195107 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
Build Bot
Comment 11 2013-03-26 10:29:21 PDT
Gustavo Noronha (kov)
Comment 12 2013-03-26 11:11:40 PDT
kov's GTK+ EWS bot
Comment 13 2013-03-26 11:59:07 PDT
Gustavo Noronha (kov)
Comment 14 2013-03-26 12:49:17 PDT
GTK+ EWS failure caused by github being down (it's where it downloads the test fonts from), we should probably make the jhbuild build step a bit more robust.
Build Bot
Comment 15 2013-03-26 12:53:18 PDT
Kent Tamura
Comment 16 2013-03-26 17:05:05 PDT
Comment on attachment 195120 [details] Patch ok
Build Bot
Comment 17 2013-03-27 05:25:23 PDT
Comment on attachment 195120 [details] Patch Attachment 195120 [details] did not pass mac-ews (mac): Output: http://webkit-commit-queue.appspot.com/results/17295408 New failing tests: fast/forms/select/popup-closes-on-blur.html
Build Bot
Comment 18 2013-03-27 05:25:26 PDT
Created attachment 195288 [details] Archive of layout-test-results from webkit-ews-01 for mac-future The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-future Platform: Mac OS X 10.8.2
Build Bot
Comment 19 2013-03-27 06:02:43 PDT
Comment on attachment 195120 [details] Patch Attachment 195120 [details] did not pass mac-ews (mac): Output: http://webkit-commit-queue.appspot.com/results/17231648 New failing tests: fast/forms/select/popup-closes-on-blur.html
Build Bot
Comment 20 2013-03-27 06:02:47 PDT
Created attachment 195294 [details] Archive of layout-test-results from webkit-ews-05 for mac-future The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-future Platform: Mac OS X 10.8.2
Gustavo Noronha (kov)
Comment 21 2013-03-27 07:29:01 PDT
Created attachment 195316 [details] Patch Patch for landing, final run through the EWS
Build Bot
Comment 22 2013-03-27 13:11:28 PDT
Build Bot
Comment 23 2013-03-28 02:30:26 PDT
Comment on attachment 195316 [details] Patch Attachment 195316 [details] did not pass mac-ews (mac): Output: http://webkit-commit-queue.appspot.com/results/17251709 New failing tests: fast/forms/select/popup-closes-on-blur.html
Build Bot
Comment 24 2013-03-28 02:30:29 PDT
Created attachment 195507 [details] Archive of layout-test-results from webkit-ews-01 for mac-future The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-future Platform: Mac OS X 10.8.2
Gustavo Noronha (kov)
Comment 25 2013-04-02 14:19:27 PDT
Gustavo Noronha (kov)
Comment 26 2013-04-03 06:19:11 PDT
Comment on attachment 196223 [details] Patch Clearing flags on attachment: 196223 Committed r147548: <http://trac.webkit.org/changeset/147548>
Gustavo Noronha (kov)
Comment 27 2013-04-03 06:19:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.