Should close select popup when the element loses focus https://bugs.webkit.org/show_bug.cgi?id=113220

Patch by Gustavo Noronha Silva <gustavo.noronha@collabora.com> on 2013-04-03
Reviewed by Kent Tamura.

Source/WebCore:

Test: fast/forms/select-popup-closes-on-blur.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::menuListDefaultEventHandler): handle the blur event, closing
the popup menu if any.
* testing/Internals.cpp:
(WebCore::Internals::isSelectPopupVisible): utility to query the select node renderer to
find out whether the popup is open or closed.
(WebCore):
* testing/Internals.h: add the new method definition.
* testing/Internals.idl: ditto.

Source/WebKit/win:

* WebKit.vcproj/WebKitExports.def.in: export WebCore::HTMLNames::selectTag for Internals

LayoutTests:

* fast/forms/select/popup-closes-on-blur-expected.txt: Added.
* fast/forms/select/popup-closes-on-blur.html: Added.
* platform/mac/TestExpectations:
* platform/win/TestExpectations:

Canonical link: https://commits.webkit.org/132216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147548 268f45cc-cd09-0410-ab3c-d52691b4dbfc