Source/WebCore/testing/Internals.h
@@ -309,6 +309,8 @@ public:
     void simulateAudioInterruption(Node*);
 #endif
 
+    bool isSelectPopupVisible(Node*);
+
 private:
     explicit Internals(Document*);
     Document* contextDocument() const;
